[package]
name = "tracing-texray"
description = "Tracing layer to view a plaintext timeline of spans and events"
version = "0.1.1"
edition = "2018"
authors = ["russell.r.cohen@gmail.com"]
license = "MIT"
repository = "https://github.com/rcoh/tracing-texray"
rust-version = "1.54.0"

[dependencies]
tracing-subscriber = "0.3.5"
tracing = { version  = "0.1.29", default-features = false }
lazy_static = "1.4.0"
term_size = "0.3.2"
parking_lot = "0.11.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }